salesforce_sfdx/main/default/objects/GeneralSettings__c/fields/CI_LatestSFDeployCommit__c.field-meta.xml
<CustomField>
    <fullName>CI_LatestSFDeployCommit__c</fullName>
    <description>Automatically set updated by jenkins with the latest git commit reference for latest successful deploy</description>
    <inlineHelpText>Field set by Jenkins Deploy pipeline</inlineHelpText>
    <label>Latest SF Deploy Commit</label>
    <length>40</length>
    <type>Text</type>
</CustomField>