salesforce_sfdx/main/default/objects/GeneralSettings__c/fields/Logger_ExceptionEnabled__c.field-meta.xml
<CustomField>
    <fullName>Logger_ExceptionEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If true enables storing of Exception Application Log records</description>
    <label>Logger Exception Enabled</label>
    <type>Checkbox</type>
</CustomField>